--- a/index.html
+++ b/index.html
@@ -45,13 +45,93 @@
     </div>
 </header>
 <section class="container-fluid">
-    <div class="row row-table">
-        <div class="col-md-8 bg-color-three-reasons section-column">
-            <div class="col">
-                <h3 class="section-heading uppercase">About Me </h3>
+    <div class="row">
+    <div class="col-md-4 bg-color-personal-info section-column">
+        <div class="row">
+            <div class="col-12">
+                <h3 class="section-heading uppercase">Personal Info</h3>
+            </div>
+        </div>
+        <div class="personal-info-item">
+            <div class="key">
+                <p class="uppercase">name:</p>
+            </div>
+            <div class="value">
+                <p>Amy Hollis</p>
+            </div>
+        </div>
+        <div class="personal-info-item">
+            <div class="key">
+                <p class="uppercase">address:</p>
+            </div>
+            <div class="value">
+                <p>My House, My Road, My Town,uk</p>
+            </div>
+        </div>
+        <div class="personal-info-item">
+            <div class="key">
+                <p class="uppercase">phone:</p>
+            </div>
+            <div class="value">
+                <p>07 486 255 364</p>
+            </div>
+        </div>
+        <div class="personal-info-item">
+            <div class="key">
+                <p class="uppercase">email:</p>
+            </div>
+            <div class="value">
+                <p>amy.hollis@example.com</p>
             </div>
         </div>
     </div>
+    <div class="col-md-8 bg-color-three-reasons section-column">
+      <div class="row">
+        <div class="col">
+            <h3 class="section-heading uppercase">About me</h3>
+        </div>
+      </div> 
+      <div class="row">
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                <div class="row">
+                    <div class="col-2">
+                        <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-10">
+                        <h4 class="three-reasons-heading uppercase">What do i do?</h4>
+                        <p> I am a newly qualified Full Stack Developer who is eagar to 
+                        continue learning and gain experience in the indusrty</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                <div class="row">
+                    <div class="col-2">
+                        <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-10">
+                        <h4 class="three-reasons-heading uppercase">how do i do it?</h4>
+                        <p> I understand that it takes aesthetics, desgin, application speed,
+                        security ad reliablilyty to create a great user experience. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                <div class="row">
+                    <div class="col-2">
+                        <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                    </div>
+                    <div class="col-10">
+                        <h4 class="three-reasons-heading uppercase">why hire me?</h4>
+                        <p> I have recently been awarded a Diploma in Full Stack Development from
+                        Code Institute. I like to work in enthusiastic teams to get the product
+                        createed within the deadlines. However, I am happy to work on my own and implement myown ideas</p>
+                    </div>
+                </div>
+            </div>
+      </div> 
+    </div>       
+    
 </section>
 <footer class="container-fluid">
     <div id="footer-details" class="row">
