--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                         <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menu-item">
                             <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
+                        <li class="col-6 col=sm-3 ui-menu-color-interests list-inline-item menu-item">
+                            <a href = "interests.html" class="hvr-sweep-to-bottom"><i class="fas fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                        </li><li class="col-6 col=sm-3 ui-menu-color-github list-inline-item menu-item">
+                            <a href = "github.html" class="hvr-sweep-to-bottom"><i class="fab fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                        </li>
                         <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menu-item">
                             <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fas fa-download" aria-hidden="true"></i><span>Download</span></a>
                         </li>
@@ -131,7 +136,7 @@
             </div>
       </div> 
     </div>       
-    
+    </div>
 </section>
 <footer class="container-fluid">
     <div id="footer-details" class="row">
