--- a/interests.html
+++ b/interests.html
@@ -160,6 +160,11 @@
             </div>
         </div>
     </footer>
+   
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKH6quED5fjPpcKTCnrt-OqRVJ-kMFAlQ&callback=initMap"></script>
+    <script src="assets/js/maps.js"></script>
+
 </body>
 
 </html>
